# hiram

./: .gitignore  .gitmodules  CMakeLists.txt  Options.py  README.md  TODO.org  Untitled.ipynb  bond.py  build.gradle.kts  docker-compose.yml  engine.py  exampl-2.ipynb  example-1.ipynb  example-3.ipynb  facade.py  hiram_analysis.ipynb  main.py  market_data.py  model.py  old_payoff.py  option.py  payoff.py  plot.py  pom.xml  portfolio.py  pyproject.toml  requirements.txt  settings.gradle.kts  setup.py  stock.py  strategy.py  test.ipynb  test.py
.ipynb_checkpoints/: Bond-checkpoint.py  Options-checkpoint.py  README-checkpoint.md  Untitled-checkpoint.ipynb  hiram_analysis-checkpoint.ipynb  stock-checkpoint.py  temp-checkpoint.ipynb
backend/: Dockerfile  build.gradle.kts  pom.xml
dashboard/: README.md  TODO.md  home.py  streamlit_app.py  utils.py
docs/: MVP.md
examples/: example-1.ipynb  example2_StrategiesPlot.ipynb
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
hiram/: BlackScholesModel.cpp  BlackScholesModel.hpp  CMakeLists.txt  Derivative.cpp  Derivative.h  EuropeanOption.cpp  EuropeanOption.hpp  MarketData.cpp  MarketData.h  MarketData.hpp  Option.cpp  Option.hpp  Payoff.hpp  PayoffCall.cpp  PayoffCall.hpp  PayoffPut.cpp  PayoffPut.hpp  PricingModel.hpp  engine.py  main.cpp  market_data.py  plot.py  stock.py  strategy.py
hiram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hiram/hiram.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pricer/: Dockerfile  pom.xml
(+110 files in other folders)
